Fix Dropdown and ComboBox list z-index (#188)

--- a/packages/lab/src/dropdown/Dropdown.css
+++ b/packages/lab/src/dropdown/Dropdown.css
@@ -8,3 +8,7 @@
 .uitkDropdown-fullwidth {
   width: 100%;
 }
+
+.uitkDropdown-listWindowRoot {
+  z-index: calc(var(--uitk-zindex-tooltip) - 1);
+}
